bison-jaguar.output
Terminales no usados en la gramática

   PRINTF
   PRINTFARROW
   NOT


La regla es inútil debido a los conflictos

  128 $@12: %empty


Estado 36 conflictos: 1 desplazamiento/reducción
Estado 79 conflictos: 1 desplazamiento/reducción, 10 reducción/reducción
Estado 93 conflictos: 12 reducción/reducción
Estado 125 conflictos: 8 reducción/reducción
Estado 131 conflictos: 2 reducción/reducción
Estado 203 conflictos: 11 reducción/reducción
Estado 282 conflictos: 12 reducción/reducción
Estado 322 conflictos: 11 reducción/reducción
Estado 396 conflictos: 1 desplazamiento/reducción, 9 reducción/reducción


Gramática

    0 $accept: programa $end

    1 programa: bloque
    2         | %empty

    3 bloque: loopStructure
    4       | instr
    5       | conditionalStructure
    6       | functionStructure
    7       | error
    8       | functionStructure bloque
    9       | conditionalStructure bloque
   10       | instr bloque
   11       | error bloque
   12       | loopStructure bloque

   13 $@1: %empty

   14 functionStructure: INT IDENTIF $@1 '(' functionParameter ')' '{' functionBlockEmpty '}'

   15 $@2: %empty

   16 functionStructure: CHAR IDENTIF $@2 '(' functionParameter ')' '{' functionBlockEmpty '}'

   17 $@3: %empty

   18 functionStructure: BOOL IDENTIF $@3 '(' functionParameter ')' '{' functionBlockEmpty '}'

   19 $@4: %empty

   20 functionStructure: STRING IDENTIF $@4 '(' functionParameter ')' '{' functionBlockEmpty '}'

   21 $@5: %empty

   22 functionStructure: VOID IDENTIF $@5 '(' functionParameter ')' '{' functionBlockEmpty '}'
   23                  | functionCallStructure ';'

   24 functionCallStructure: IDENTIF '(' functionCallParameter ')'

   25 $@6: %empty

   26 functionParameter: $@6 Parameter
   27                  | %empty

   28 Parameter: INT IDENTIF
   29          | CHAR IDENTIF
   30          | STRING IDENTIF
   31          | BOOL IDENTIF
   32          | INT IDENTIF ',' Parameter
   33          | CHAR IDENTIF ',' Parameter
   34          | STRING IDENTIF ',' Parameter
   35          | BOOL IDENTIF ',' Parameter

   36 functionCallParameter: IDENTIF
   37                      | %empty
   38                      | IDENTIF ',' functionCallParameter
   39                      | expI ',' functionCallParameter
   40                      | expB ',' functionCallParameter
   41                      | expC ',' functionCallParameter
   42                      | expS ',' functionCallParameter
   43                      | expI
   44                      | expB
   45                      | expC
   46                      | expS

   47 functionBlockEmpty: %empty

   48 $@7: %empty

   49 functionBlockEmpty: $@7 functionBlock

   50 functionBlock: loopStructure
   51              | conditionalStructure
   52              | functionStructure
   53              | instr
   54              | RETURN IDENTIF ';'
   55              | RETURN expI ';'
   56              | RETURN expB ';'
   57              | RETURN expC ';'
   58              | RETURN expS ';'
   59              | instr functionBlock
   60              | RETURN IDENTIF ';' functionBlock
   61              | RETURN expI ';' functionBlock
   62              | RETURN expB ';' functionBlock
   63              | RETURN expC ';' functionBlock
   64              | RETURN expS ';' functionBlock
   65              | loopStructure functionBlock
   66              | conditionalStructure functionBlock
   67              | functionStructure functionBlock

   68 conditionalStructure: ifStructure
   69                     | ifStructure elifStructure
   70                     | ifStructure elifStructure elseStructure
   71                     | ifStructure elseStructure

   72 ifStructure: IFCOND '(' expB ')' '{' ifBlockEmpty '}'

   73 elifStructure: ELIF '(' expB ')' '{' ifBlockEmpty '}'
   74              | ELIF '(' expB ')' '{' ifBlockEmpty '}' elifStructure

   75 elseStructure: ELSECOND '{' ifBlockEmpty '}'

   76 ifBlockEmpty: %empty

   77 $@8: %empty

   78 ifBlockEmpty: $@8 ifBlock

   79 ifBlock: loopStructure
   80        | conditionalStructure
   81        | functionStructure
   82        | instr
   83        | loopBlock instr
   84        | loopBlock loopStructure
   85        | loopBlock conditionalStructure
   86        | loopBlock functionStructure

   87 loopStructure: FOR '(' expI ';' expB ';' expI ')' '{' loopBlockEmpty '}'
   88              | DOLOOP '(' expB ')' '{' loopBlockEmpty '}' WHILELOOP '(' expB ')' ';'
   89              | WHILELOOP '(' expB ')' '{' loopBlockEmpty '}'

   90 loopBlockEmpty: %empty

   91 $@9: %empty

   92 loopBlockEmpty: $@9 loopBlock

   93 loopBlock: loopStructure
   94          | conditionalStructure
   95          | functionStructure
   96          | instr
   97          | BREAK ';'
   98          | CONTINUE ';'
   99          | loopBlock BREAK ';'
  100          | loopBlock CONTINUE ';'
  101          | loopBlock instr
  102          | loopBlock loopStructure
  103          | loopBlock conditionalStructure
  104          | loopBlock functionStructure

  105 instr: dexp ';'
  106      | declVI ';'
  107      | declVC ';'
  108      | declVB ';'
  109      | declVS ';'

  110 dexp: INT IDENTIF '=' expI
  111     | BOOL IDENTIF '=' expB
  112     | CHAR IDENTIF '=' expC
  113     | STRING IDENTIF '=' expS
  114     | INT IDENTIF '=' functionCallStructure
  115     | BOOL IDENTIF '=' functionCallStructure
  116     | CHAR IDENTIF '=' functionCallStructure
  117     | STRING IDENTIF '=' functionCallStructure
  118     | INT IDENTIF
  119     | BOOL IDENTIF
  120     | CHAR IDENTIF
  121     | STRING IDENTIF

  122 $@10: %empty

  123 declVI: INT '[' ']' IDENTIF '=' $@10 '[' viContent ']'
  124       | INT '[' ']' IDENTIF

  125 $@11: %empty

  126 declVI: INT '[' expI ']' IDENTIF '=' $@11 '[' viContent ']'
  127       | INT '[' expI ']' IDENTIF

  128 $@12: %empty

  129 declVI: IDENTIF '=' $@12 '[' viContent ']'
  130       | IDENTIF '[' expI ']' '=' expI

  131 viContent: expI

  132 $@13: %empty

  133 viContent: expI $@13 ',' viContent

  134 $@14: %empty

  135 declVC: CHAR '[' ']' IDENTIF '=' $@14 '[' vcContent ']'
  136       | CHAR '[' ']' IDENTIF

  137 $@15: %empty

  138 declVC: CHAR '[' expI ']' IDENTIF '=' $@15 '[' vcContent ']'
  139       | CHAR '[' expI ']' IDENTIF

  140 $@16: %empty

  141 declVC: IDENTIF '=' $@16
  142       | IDENTIF '[' expI ']' '=' expC

  143 vcContent: expC

  144 $@17: %empty

  145 vcContent: expC $@17 ',' vcContent

  146 $@18: %empty

  147 declVS: STRING '[' ']' IDENTIF '=' $@18 '[' vsContent ']'
  148       | STRING '[' ']' IDENTIF

  149 $@19: %empty

  150 declVS: STRING '[' expI ']' IDENTIF '=' $@19 '[' vsContent ']'
  151       | STRING '[' expI ']' IDENTIF

  152 $@20: %empty

  153 declVS: IDENTIF '=' '[' vsContent ']' $@20
  154       | IDENTIF '[' expI ']' '=' expS

  155 vsContent: expS

  156 $@21: %empty

  157 vsContent: expS $@21 ',' vsContent

  158 $@22: %empty

  159 declVB: BOOL '[' ']' IDENTIF '=' $@22 '[' vbContent ']'
  160       | BOOL '[' ']' IDENTIF

  161 $@23: %empty

  162 declVB: BOOL '[' expI ']' IDENTIF '=' $@23 '[' vbContent ']'
  163       | BOOL '[' expI ']' IDENTIF

  164 $@24: %empty

  165 declVB: IDENTIF '=' '[' vbContent ']' $@24
  166       | IDENTIF '[' expI ']' '=' expB

  167 vbContent: expB

  168 $@25: %empty

  169 vbContent: expB $@25 ',' vbContent

  170 expI: expI '+' expI
  171     | expI '-' expI
  172     | expI '*' expI
  173     | expI '/' expI
  174     | expI '^' expI
  175     | '(' expI ')'
  176     | NUMBER
  177     | '-' NUMBER
  178     | IDENTIF '[' NUMBER ']'
  179     | IDENTIF

  180 expS: expS '+' expS
  181     | expI '*' expS
  182     | expS '*' expI
  183     | '(' expS ')'
  184     | STRINGLITERAL
  185     | IDENTIF '[' NUMBER ']'
  186     | IDENTIF

  187 expB: expB AND expB
  188     | expB OR expB
  189     | expB EQUIVALENT expB
  190     | expI EQUIVALENT expI
  191     | expC EQUIVALENT expC
  192     | expS EQUIVALENT expS
  193     | expB EQUIVALENTNOT expB
  194     | expI EQUIVALENTNOT expI
  195     | expC EQUIVALENTNOT expC
  196     | expS EQUIVALENTNOT expS
  197     | expI BIGGEREQUALTHAN expI
  198     | expS BIGGEREQUALTHAN expS
  199     | expI SMALLEREQUALTHAN expI
  200     | expS SMALLEREQUALTHAN expS
  201     | expS '>' expS
  202     | expI '>' expI
  203     | expS '<' expS
  204     | expI '<' expI
  205     | '(' expB ')'
  206     | TRUE
  207     | FALSE
  208     | IDENTIF '[' NUMBER ']'
  209     | IDENTIF

  210 expC: CHARACTER
  211     | IDENTIF '[' NUMBER ']'
  212     | IDENTIF


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 14 16 18 20 22 24 72 73 74 87 88 89 175 183 205
')' (41) 14 16 18 20 22 24 72 73 74 87 88 89 175 183 205
'*' (42) 172 181 182
'+' (43) 170 180
',' (44) 32 33 34 35 38 39 40 41 42 133 145 157 169
'-' (45) 171 177
'/' (47) 173
';' (59) 23 54 55 56 57 58 60 61 62 63 64 87 88 97 98 99 100 105 106
    107 108 109
'<' (60) 203 204
'=' (61) 110 111 112 113 114 115 116 117 123 126 129 130 135 138 141
    142 147 150 153 154 159 162 165 166
'>' (62) 201 202
'[' (91) 123 124 126 127 129 130 135 136 138 139 142 147 148 150 151
    153 154 159 160 162 163 165 166 178 185 208 211
']' (93) 123 124 126 127 129 130 135 136 138 139 142 147 148 150 151
    153 154 159 160 162 163 165 166 178 185 208 211
'^' (94) 174
'{' (123) 14 16 18 20 22 72 73 74 75 87 88 89
'}' (125) 14 16 18 20 22 72 73 74 75 87 88 89
error (256) 7 11
VOID (258) 22
INT (259) 14 28 32 110 114 118 123 124 126 127
CHAR (260) 16 29 33 112 116 120 135 136 138 139
BOOL (261) 18 31 35 111 115 119 159 160 162 163
STRING (262) 20 30 34 113 117 121 147 148 150 151
NUMBER (263) 176 177 178 185 208 211
CHARACTER (264) 210
IDENTIF (265) 14 16 18 20 22 24 28 29 30 31 32 33 34 35 36 38 54 60
    110 111 112 113 114 115 116 117 118 119 120 121 123 124 126 127
    129 130 135 136 138 139 141 142 147 148 150 151 153 154 159 160
    162 163 165 166 178 179 185 186 208 209 211 212
STRINGLITERAL (266) 184
RETURN (267) 54 55 56 57 58 60 61 62 63 64
IFCOND (268) 72
ELIF (269) 73 74
ELSECOND (270) 75
FOR (271) 87
WHILELOOP (272) 88 89
DOLOOP (273) 88
BREAK (274) 97 99
CONTINUE (275) 98 100
PRINTF (276)
PRINTFARROW (277)
SMALLEREQUALTHAN (278) 199 200
BIGGEREQUALTHAN (279) 197 198
EQUIVALENT (280) 189 190 191 192
EQUIVALENTNOT (281) 193 194 195 196
AND (282) 187
OR (283) 188
NOT (284)
TRUE (285) 206
FALSE (286) 207


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
programa (49)
    en la izquierda: 1 2, en la derecha: 0
bloque (50)
    en la izquierda: 3 4 5 6 7 8 9 10 11 12, en la derecha: 1 8 9 10
    11 12
functionStructure (51)
    en la izquierda: 14 16 18 20 22 23, en la derecha: 6 8 52 67 81
    86 95 104
$@1 (52)
    en la izquierda: 13, en la derecha: 14
$@2 (53)
    en la izquierda: 15, en la derecha: 16
$@3 (54)
    en la izquierda: 17, en la derecha: 18
$@4 (55)
    en la izquierda: 19, en la derecha: 20
$@5 (56)
    en la izquierda: 21, en la derecha: 22
functionCallStructure (57)
    en la izquierda: 24, en la derecha: 23 114 115 116 117
functionParameter (58)
    en la izquierda: 26 27, en la derecha: 14 16 18 20 22
$@6 (59)
    en la izquierda: 25, en la derecha: 26
Parameter (60)
    en la izquierda: 28 29 30 31 32 33 34 35, en la derecha: 26 32
    33 34 35
functionCallParameter (61)
    en la izquierda: 36 37 38 39 40 41 42 43 44 45 46, en la derecha:
    24 38 39 40 41 42
functionBlockEmpty (62)
    en la izquierda: 47 49, en la derecha: 14 16 18 20 22
$@7 (63)
    en la izquierda: 48, en la derecha: 49
functionBlock (64)
    en la izquierda: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67, en la derecha: 49 59 60 61 62 63 64 65 66 67
conditionalStructure (65)
    en la izquierda: 68 69 70 71, en la derecha: 5 9 51 66 80 85 94
    103
ifStructure (66)
    en la izquierda: 72, en la derecha: 68 69 70 71
elifStructure (67)
    en la izquierda: 73 74, en la derecha: 69 70 74
elseStructure (68)
    en la izquierda: 75, en la derecha: 70 71
ifBlockEmpty (69)
    en la izquierda: 76 78, en la derecha: 72 73 74 75
$@8 (70)
    en la izquierda: 77, en la derecha: 78
ifBlock (71)
    en la izquierda: 79 80 81 82 83 84 85 86, en la derecha: 78
loopStructure (72)
    en la izquierda: 87 88 89, en la derecha: 3 12 50 65 79 84 93 102
loopBlockEmpty (73)
    en la izquierda: 90 92, en la derecha: 87 88 89
$@9 (74)
    en la izquierda: 91, en la derecha: 92
loopBlock (75)
    en la izquierda: 93 94 95 96 97 98 99 100 101 102 103 104, en la derecha:
    83 84 85 86 92 99 100 101 102 103 104
instr (76)
    en la izquierda: 105 106 107 108 109, en la derecha: 4 10 53 59
    82 83 96 101
dexp (77)
    en la izquierda: 110 111 112 113 114 115 116 117 118 119 120 121,
    en la derecha: 105
declVI (78)
    en la izquierda: 123 124 126 127 129 130, en la derecha: 106
$@10 (79)
    en la izquierda: 122, en la derecha: 123
$@11 (80)
    en la izquierda: 125, en la derecha: 126
$@12 (81)
    en la izquierda: 128, en la derecha: 129
viContent (82)
    en la izquierda: 131 133, en la derecha: 123 126 129 133
$@13 (83)
    en la izquierda: 132, en la derecha: 133
declVC (84)
    en la izquierda: 135 136 138 139 141 142, en la derecha: 107
$@14 (85)
    en la izquierda: 134, en la derecha: 135
$@15 (86)
    en la izquierda: 137, en la derecha: 138
$@16 (87)
    en la izquierda: 140, en la derecha: 141
vcContent (88)
    en la izquierda: 143 145, en la derecha: 135 138 145
$@17 (89)
    en la izquierda: 144, en la derecha: 145
declVS (90)
    en la izquierda: 147 148 150 151 153 154, en la derecha: 109
$@18 (91)
    en la izquierda: 146, en la derecha: 147
$@19 (92)
    en la izquierda: 149, en la derecha: 150
$@20 (93)
    en la izquierda: 152, en la derecha: 153
vsContent (94)
    en la izquierda: 155 157, en la derecha: 147 150 153 157
$@21 (95)
    en la izquierda: 156, en la derecha: 157
declVB (96)
    en la izquierda: 159 160 162 163 165 166, en la derecha: 108
$@22 (97)
    en la izquierda: 158, en la derecha: 159
$@23 (98)
    en la izquierda: 161, en la derecha: 162
$@24 (99)
    en la izquierda: 164, en la derecha: 165
vbContent (100)
    en la izquierda: 167 169, en la derecha: 159 162 165 169
$@25 (101)
    en la izquierda: 168, en la derecha: 169
expI (102)
    en la izquierda: 170 171 172 173 174 175 176 177 178 179, en la derecha:
    39 43 55 61 87 110 126 127 130 131 133 138 139 142 150 151 154
    162 163 166 170 171 172 173 174 175 181 182 190 194 197 199 202
    204
expS (103)
    en la izquierda: 180 181 182 183 184 185 186, en la derecha: 42
    46 58 64 113 154 155 157 180 181 182 183 192 196 198 200 201 203
expB (104)
    en la izquierda: 187 188 189 190 191 192 193 194 195 196 197 198
    199 200 201 202 203 204 205 206 207 208 209, en la derecha: 40
    44 56 62 72 73 74 87 88 89 111 166 167 169 187 188 189 193 205
expC (105)
    en la izquierda: 210 211 212, en la derecha: 41 45 57 63 112 142
    143 145 191 195


Estado 0

    0 $accept: . programa $end

    error      desplazar e ir al estado 1
    VOID       desplazar e ir al estado 2
    INT        desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    BOOL       desplazar e ir al estado 5
    STRING     desplazar e ir al estado 6
    IDENTIF    desplazar e ir al estado 7
    IFCOND     desplazar e ir al estado 8
    FOR        desplazar e ir al estado 9
    WHILELOOP  desplazar e ir al estado 10
    DOLOOP     desplazar e ir al estado 11

    $end  reduce usando la regla 2 (programa)

    programa               ir al estado 12
    bloque                 ir al estado 13
    functionStructure      ir al estado 14
    functionCallStructure  ir al estado 15
    conditionalStructure   ir al estado 16
    ifStructure            ir al estado 17
    loopStructure          ir al estado 18
    instr                  ir al estado 19
    dexp                   ir al estado 20
    declVI                 ir al estado 21
    declVC                 ir al estado 22
    declVS                 ir al estado 23
    declVB                 ir al estado 24


Estado 1

    7 bloque: error .
   11       | error . bloque

    error      desplazar e ir al estado 1
    VOID       desplazar e ir al estado 2
    INT        desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    BOOL       desplazar e ir al estado 5
    STRING     desplazar e ir al estado 6
    IDENTIF    desplazar e ir al estado 7
    IFCOND     desplazar e ir al estado 8
    FOR        desplazar e ir al estado 9
    WHILELOOP  desplazar e ir al estado 10
    DOLOOP     desplazar e ir al estado 11

    $end  reduce usando la regla 7 (bloque)

    bloque                 ir al estado 25
    functionStructure      ir al estado 14
    functionCallStructure  ir al estado 15
    conditionalStructure   ir al estado 16
    ifStructure            ir al estado 17
    loopStructure          ir al estado 18
    instr                  ir al estado 19
    dexp                   ir al estado 20
    declVI                 ir al estado 21
    declVC                 ir al estado 22
    declVS                 ir al estado 23
    declVB                 ir al estado 24


Estado 2

   22 functionStructure: VOID . IDENTIF $@5 '(' functionParameter ')' '{' functionBlockEmpty '}'

    IDENTIF  desplazar e ir al estado 26


Estado 3

   14 functionStructure: INT . IDENTIF $@1 '(' functionParameter ')' '{' functionBlockEmpty '}'
  110 dexp: INT . IDENTIF '=' expI
  114     | INT . IDENTIF '=' functionCallStructure
  118     | INT . IDENTIF
  123 declVI: INT . '[' ']' IDENTIF '=' $@10 '[' viContent ']'
  124       | INT . '[' ']' IDENTIF
  126       | INT . '[' expI ']' IDENTIF '=' $@11 '[' viContent ']'
  127       | INT . '[' expI ']' IDENTIF

    IDENTIF  desplazar e ir al estado 27
    '['      desplazar e ir al estado 28


Estado 4

   16 functionStructure: CHAR . IDENTIF $@2 '(' functionParameter ')' '{' functionBlockEmpty '}'
  112 dexp: CHAR . IDENTIF '=' expC
  116     | CHAR . IDENTIF '=' functionCallStructure
  120     | CHAR . IDENTIF
  135 declVC: CHAR . '[' ']' IDENTIF '=' $@14 '[' vcContent ']'
  136       | CHAR . '[' ']' IDENTIF
  138       | CHAR . '[' expI ']' IDENTIF '=' $@15 '[' vcContent ']'
  139       | CHAR . '[' expI ']' IDENTIF

    IDENTIF  desplazar e ir al estado 29
    '['      desplazar e ir al estado 30


Estado 5

   18 functionStructure: BOOL . IDENTIF $@3 '(' functionParameter ')' '{' functionBlockEmpty '}'
  111 dexp: BOOL . IDENTIF '=' expB
  115     | BOOL . IDENTIF '=' functionCallStructure
  119     | BOOL . IDENTIF
  159 declVB: BOOL . '[' ']' IDENTIF '=' $@22 '[' vbContent ']'
  160       | BOOL . '[' ']' IDENTIF
  162       | BOOL . '[' expI ']' IDENTIF '=' $@23 '[' vbContent ']'
  163       | BOOL . '[' expI ']' IDENTIF

    IDENTIF  desplazar e ir al estado 31
    '['      desplazar e ir al estado 32


Estado 6

   20 functionStructure: STRING . IDENTIF $@4 '(' functionParameter ')' '{' functionBlockEmpty '}'
  113 dexp: STRING . IDENTIF '=' expS
  117     | STRING . IDENTIF '=' functionCallStructure
  121     | STRING . IDENTIF
  147 declVS: STRING . '[' ']' IDENTIF '=' $@18 '[' vsContent ']'
  148       | STRING . '[' ']' IDENTIF
  150       | STRING . '[' expI ']' IDENTIF '=' $@19 '[' vsContent ']'
  151       | STRING . '[' expI ']' IDENTIF

    IDENTIF  desplazar e ir al estado 33
    '['      desplazar e ir al estado 34


Estado 7

   24 functionCallStructure: IDENTIF . '(' functionCallParameter ')'
  129 declVI: IDENTIF . '=' $@12 '[' viContent ']'
  130       | IDENTIF . '[' expI ']' '=' expI
  141 declVC: IDENTIF . '=' $@16
  142       | IDENTIF . '[' expI ']' '=' expC
  153 declVS: IDENTIF . '=' '[' vsContent ']' $@20
  154       | IDENTIF . '[' expI ']' '=' expS
  165 declVB: IDENTIF . '=' '[' vbContent ']' $@24
  166       | IDENTIF . '[' expI ']' '=' expB

    '('  desplazar e ir al estado 35
    '='  desplazar e ir al estado 36
    '['  desplazar e ir al estado 37


Estado 8

   72 ifStructure: IFCOND . '(' expB ')' '{' ifBlockEmpty '}'

    '('  desplazar e ir al estado 38


Estado 9

   87 loopStructure: FOR . '(' expI ';' expB ';' expI ')' '{' loopBlockEmpty '}'

    '('  desplazar e ir al estado 39


Estado 10

   89 loopStructure: WHILELOOP . '(' expB ')' '{' loopBlockEmpty '}'

    '('  desplazar e ir al estado 40


Estado 11

   88 loopStructure: DOLOOP . '(' expB ')' '{' loopBlockEmpty '}' WHILELOOP '(' expB ')' ';'

    '('  desplazar e ir al estado 41


Estado 12

    0 $accept: programa . $end

    $end  desplazar e ir al estado 42


Estado 13

    1 programa: bloque .

    $default  reduce usando la regla 1 (programa)


Estado 14

    6 bloque: functionStructure .
    8       | functionStructure . bloque

    error      desplazar e ir al estado 1
    VOID       desplazar e ir al estado 2
    INT        desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    BOOL       desplazar e ir al estado 5
    STRING     desplazar e ir al estado 6
    IDENTIF    desplazar e ir al estado 7
    IFCOND     desplazar e ir al estado 8
    FOR        desplazar e ir al estado 9
    WHILELOOP  desplazar e ir al estado 10
    DOLOOP     desplazar e ir al estado 11

    $end  reduce usando la regla 6 (bloque)

    bloque                 ir al estado 43
    functionStructure      ir al estado 14
    functionCallStructure  ir al estado 15
    conditionalStructure   ir al estado 16
    ifStructure            ir al estado 17
    loopStructure          ir al estado 18
    instr                  ir al estado 19
    dexp                   ir al estado 20
    declVI                 ir al estado 21
    declVC                 ir al estado 22
    declVS                 ir al estado 23
    declVB                 ir al estado 24


Estado 15

   23 functionStructure: functionCallStructure . ';'

    ';'  desplazar e ir al estado 44


Estado 16

    5 bloque: conditionalStructure .
    9       | conditionalStructure . bloque

    error      desplazar e ir al estado 1
    VOID       desplazar e ir al estado 2
    INT        desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    BOOL       desplazar e ir al estado 5
    STRING     desplazar e ir al estado 6
    IDENTIF    desplazar e ir al estado 7
    IFCOND     desplazar e ir al estado 8
    FOR        desplazar e ir al estado 9
    WHILELOOP  desplazar e ir al estado 10
    DOLOOP     desplazar e ir al estado 11

    $end  reduce usando la regla 5 (bloque)

    bloque                 ir al estado 45
    functionStructure      ir al estado 14
    functionCallStructure  ir al estado 15
    conditionalStructure   ir al estado 16
    ifStructure            ir al estado 17
    loopStructure          ir al estado 18
    instr                  ir al estado 19
    dexp                   ir al estado 20
    declVI                 ir al estado 21
    declVC                 ir al estado 22
    declVS                 ir al estado 23
    declVB                 ir al estado 24


Estado 17

   68 conditionalStructure: ifStructure .
   69                     | ifStructure . elifStructure
   70                     | ifStructure . elifStructure elseStructure
   71                     | ifStructure . elseStructure

    ELIF      desplazar e ir al estado 46
    ELSECOND  desplazar e ir al estado 47

    $default  reduce usando la regla 68 (conditionalStructure)

    elifStructure  ir al estado 48
    elseStructure  ir al estado 49


Estado 18

    3 bloque: loopStructure .
   12       | loopStructure . bloque

    error      desplazar e ir al estado 1
    VOID       desplazar e ir al estado 2
    INT        desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    BOOL       desplazar e ir al estado 5
    STRING     desplazar e ir al estado 6
    IDENTIF    desplazar e ir al estado 7
    IFCOND     desplazar e ir al estado 8
    FOR        desplazar e ir al estado 9
    WHILELOOP  desplazar e ir al estado 10
    DOLOOP     desplazar e ir al estado 11

    $end  reduce usando la regla 3 (bloque)

    bloque                 ir al estado 50
    functionStructure      ir al estado 14
    functionCallStructure  ir al estado 15
    conditionalStructure   ir al estado 16
    ifStructure            ir al estado 17
    loopStructure          ir al estado 18
    instr                  ir al estado 19
    dexp                   ir al estado 20
    declVI                 ir al estado 21
    declVC                 ir al estado 22
    declVS                 ir al estado 23
    declVB                 ir al estado 24


Estado 19

    4 bloque: instr .
   10       | instr . bloque

    error      desplazar e ir al estado 1
    VOID       desplazar e ir al estado 2
    INT        desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    BOOL       desplazar e ir al estado 5
    STRING     desplazar e ir al estado 6
    IDENTIF    desplazar e ir al estado 7
    IFCOND     desplazar e ir al estado 8
    FOR        desplazar e ir al estado 9
    WHILELOOP  desplazar e ir al estado 10
    DOLOOP     desplazar e ir al estado 11

    $end  reduce usando la regla 4 (bloque)

    bloque                 ir al estado 51
    functionStructure      ir al estado 14
    functionCallStructure  ir al estado 15
    conditionalStructure   ir al estado 16
    ifStructure            ir al estado 17
    loopStructure          ir al estado 18
    instr                  ir al estado 19
    dexp                   ir al estado 20
    declVI                 ir al estado 21
    declVC                 ir al estado 22
    declVS                 ir al estado 23
    declVB                 ir al estado 24


Estado 20

  105 instr: dexp . ';'

    ';'  desplazar e ir al estado 52


Estado 21

  106 instr: declVI . ';'

    ';'  desplazar e ir al estado 53


Estado 22

  107 instr: declVC . ';'

    ';'  desplazar e ir al estado 54


Estado 23

  109 instr: declVS . ';'

    ';'  desplazar e ir al estado 55


Estado 24

  108 instr: declVB . ';'

    ';'  desplazar e ir al estado 56


Estado 25

   11 bloque: error bloque .

    $default  reduce usando la regla 11 (bloque)


Estado 26

   22 functionStructure: VOID IDENTIF . $@5 '(' functionParameter ')' '{' functionBlockEmpty '}'

    $default  reduce usando la regla 21 ($@5)

    $@5  ir al estado 57


Estado 27

   14 functionStructure: INT IDENTIF . $@1 '(' functionParameter ')' '{' functionBlockEmpty '}'
  110 dexp: INT IDENTIF . '=' expI
  114     | INT IDENTIF . '=' functionCallStructure
  118     | INT IDENTIF .

    '='  desplazar e ir al estado 58

    ';'       reduce usando la regla 118 (dexp)
    $default  reduce usando la regla 13 ($@1)

    $@1  ir al estado 59


Estado 28

  123 declVI: INT '[' . ']' IDENTIF '=' $@10 '[' viContent ']'
  124       | INT '[' . ']' IDENTIF
  126       | INT '[' . expI ']' IDENTIF '=' $@11 '[' viContent ']'
  127       | INT '[' . expI ']' IDENTIF

    NUMBER   desplazar e ir al estado 60
    IDENTIF  desplazar e ir al estado 61
    '-'      desplazar e ir al estado 62
    '('      desplazar e ir al estado 63
    ']'      desplazar e ir al estado 64

    expI  ir al estado 65


Estado 29

   16 functionStructure: CHAR IDENTIF . $@2 '(' functionParameter ')' '{' functionBlockEmpty '}'
  112 dexp: CHAR IDENTIF . '=' expC
  116     | CHAR IDENTIF . '=' functionCallStructure
  120     | CHAR IDENTIF .

    '='  desplazar e ir al estado 66

    ';'       reduce usando la regla 120 (dexp)
    $default  reduce usando la regla 15 ($@2)

    $@2  ir al estado 67


Estado 30

  135 declVC: CHAR '[' . ']' IDENTIF '=' $@14 '[' vcContent ']'
  136       | CHAR '[' . ']' IDENTIF
  138       | CHAR '[' . expI ']' IDENTIF '=' $@15 '[' vcContent ']'
  139       | CHAR '[' . expI ']' IDENTIF

    NUMBER   desplazar e ir al estado 60
    IDENTIF  desplazar e ir al estado 61
    '-'      desplazar e ir al estado 62
    '('      desplazar e ir al estado 63
    ']'      desplazar e ir al estado 68

    expI  ir al estado 69


Estado 31

   18 functionStructure: BOOL IDENTIF . $@3 '(' functionParameter ')' '{' functionBlockEmpty '}'
  111 dexp: BOOL IDENTIF . '=' expB
  115     | BOOL IDENTIF . '=' functionCallStructure
  119     | BOOL IDENTIF .

    '='  desplazar e ir al estado 70

    ';'       reduce usando la regla 119 (dexp)
    $default  reduce usando la regla 17 ($@3)

    $@3  ir al estado 71


Estado 32

  159 declVB: BOOL '[' . ']' IDENTIF '=' $@22 '[' vbContent ']'
  160       | BOOL '[' . ']' IDENTIF
  162       | BOOL '[' . expI ']' IDENTIF '=' $@23 '[' vbContent ']'
  163       | BOOL '[' . expI ']' IDENTIF

    NUMBER   desplazar e ir al estado 60
    IDENTIF  desplazar e ir al estado 61
    '-'      desplazar e ir al estado 62
    '('      desplazar e ir al estado 63
    ']'      desplazar e ir al estado 72

    expI  ir al estado 73


Estado 33

   20 functionStructure: STRING IDENTIF . $@4 '(' functionParameter ')' '{' functionBlockEmpty '}'
  113 dexp: STRING IDENTIF . '=' expS
  117     | STRING IDENTIF . '=' functionCallStructure
  121     | STRING IDENTIF .

    '='  desplazar e ir al estado 74

    ';'       reduce usando la regla 121 (dexp)
    $default  reduce usando la regla 19 ($@4)

    $@4  ir al estado 75


Estado 34

  147 declVS: STRING '[' . ']' IDENTIF '=' $@18 '[' vsContent ']'
  148       | STRING '[' . ']' IDENTIF
  150       | STRING '[' . expI ']' IDENTIF '=' $@19 '[' vsContent ']'
  151       | STRING '[' . expI ']' IDENTIF

    NUMBER   desplazar e ir al estado 60
    IDENTIF  desplazar e ir al estado 61
    '-'      desplazar e ir al estado 62
    '('      desplazar e ir al estado 63
    ']'      desplazar e ir al estado 76

    expI  ir al estado 77


Estado 35

   24 functionCallStructure: IDENTIF '(' . functionCallParameter ')'

    NUMBER         desplazar e ir al estado 60
    CHARACTER      desplazar e ir al estado 78
    IDENTIF        desplazar e ir al estado 79
    STRINGLITERAL  desplazar e ir al estado 80
    TRUE           desplazar e ir al estado 81
    FALSE          desplazar e ir al estado 82
    '-'            desplazar e ir al estado 62
    '('            desplazar e ir al estado 83

    $default  reduce usando la regla 37 (functionCallParameter)

    functionCallParameter  ir al estado 84
    expI                   ir al estado 85
    expS                   ir al estado 86
    expB                   ir al estado 87
    expC                   ir al estado 88


Estado 36

  129 declVI: IDENTIF '=' . $@12 '[' viContent ']'
  141 declVC: IDENTIF '=' . $@16
  153 declVS: IDENTIF '=' . '[' vsContent ']' $@20
  165 declVB: IDENTIF '=' . '[' vbContent ']' $@24

    '['  desplazar e ir al estado 89

    '['       [reduce usando la regla 128 ($@12)]
    $default  reduce usando la regla 140 ($@16)

    $@12  ir al estado 90
    $@16  ir al estado 91


Estado 37

  130 declVI: IDENTIF '[' . expI ']' '=' expI
  142 declVC: IDENTIF '[' . expI ']' '=' expC
  154 declVS: IDENTIF '[' . expI ']' '=' expS
  166 declVB: IDENTIF '[' . expI ']' '=' expB
